@@ -140,6 +140,8 @@ The following extensions are migrated into MediaWiki 1.14:
   restriction types on the protection form.
 * (bug 8440) Allow preventing blocked users from editing their talk pages
 * Improved upload file type detection for OpenDocument formats
+* (bug 15739) Add $wgArticlePathForCurid to make links with only curid=# as the
+  query string use the article path, rather than the script path
 
 
 === Bug fixes in 1.14 ===
